# circomspect

./: .gitignore  .pre-commit-config.yaml  .rustfmt.toml  CHANGELOG.md  CODEOWNERS  Cargo.toml  README.md  TODO.md  flake.nix
.github/workflows/: ci.yml
circom_algebra/: Cargo.toml
circom_algebra/src/: algebra.rs  lib.rs  modular_arithmetic.rs
cli/: Cargo.toml
cli/src/: analysis_runner.rs  config.rs  main.rs
doc/: analysis_passes.md  demo.cast
examples/: add.circom  constant-conditional.circom  multiply.circom  shadowing-variable.circom  tobits.circom  unconstrained-signal.circom  unused-variable.circom
parser/: Cargo.toml
parser/src/: errors.rs  include_logic.rs  lang.lalrpop  lib.rs  parser_logic.rs  syntax_sugar_remover.rs  syntax_sugar_traits.rs
program_analysis/: Cargo.toml
program_analysis/src/: analysis_context.rs  analysis_runner.rs  bitwise_complement.rs  bn128_specific_circuit.rs  bn254_specific_circuit.rs  config.rs  constant_conditional.rs  constraint_analysis.rs  dead_assignments.rs  definition_complexity.rs  errors.rs  field_arithmetic.rs  field_comparisons.rs  lib.rs  non_boolean_condition.rs  nonstrict_binary_conversion.rs  shadowing_analysis.rs  side_effect_analysis.rs  signal_assignments.rs  taint_analysis.rs  unconstrained_division.rs  unconstrained_less_than.rs  under_constrained_signals.rs  unused_output_signal.rs  utils.rs  visitor.rs
program_structure/: Cargo.toml
program_structure/src/: lib.rs
program_structure/src/abstract_syntax_tree/: ast.rs  ast_impl.rs  ast_shortcuts.rs  expression_builders.rs  expression_impl.rs  statement_builders.rs  statement_impl.rs
program_structure/src/control_flow_graph/: basic_block.rs  cfg.rs  cfg_impl.rs  dominator_tree.rs  errors.rs  expression_impl.rs  lifting.rs  mod.rs  param_data.rs  parameters.rs  ssa.rs  ssa_impl.rs  statement_impl.rs  unique_vars.rs  variable_meta.rs  variable_use.rs
program_structure/src/intermediate_representation/: declaration_map.rs  declarations.rs  degree_meta.rs  errors.rs  expression_impl.rs  ir.rs  ir_visitor.rs  lifting.rs  mod.rs  statement_impl.rs  type_meta.rs  value_meta.rs  variable_meta.rs
program_structure/src/program_library/: error_code.rs  error_definition.rs  file_definition.rs  function_data.rs  mod.rs  program_archive.rs  program_merger.rs  report.rs  report_code.rs  template_data.rs  template_library.rs
program_structure/src/static_single_assignment/: dominator_tree.rs  errors.rs  mod.rs  traits.rs
program_structure/src/utils/: constants.rs  directed_graph.rs  environment.rs  memory_slice.rs  mod.rs  nonempty_vec.rs  report_writer.rs  sarif_conversion.rs  writers.rs
program_structure_tests/: Cargo.toml
program_structure_tests/src/: control_flow_graph.rs  lib.rs  static_single_assignment.rs
program_structure_tests/src/control_flow_graph/: mod.rs
program_structure_tests/src/static_single_assignment/: mod.rs
