[package]
name = "circomspect"
version = "0.5.2"
edition = "2021"
license = "LGPL-3.0-only"
authors = ["Trail of Bits"]
readme = "../README.md"
description = "A static analyzer and linter for the Circom zero-knowledge DSL"
repository = "https://github.com/trailofbits/circomspect"
keywords = ["cryptography", "static-analysis", "zero-knowledge", "circom"]

[dependencies]
anyhow = "1.0"
atty = "0.2.14"
clap = { version = "3.2", features = ["derive"] }
log = "0.4"
parser = { package = "circomspect-parser", version = "2.0.1", path = "../parser" }
pretty_env_logger = "0.4"
program_analysis = { package = "circomspect-program-analysis", version = "0.5.1", path = "../program_analysis" }
program_structure = { package = "circomspect-program-structure", version = "2.0.1", path = "../program_structure" }
serde_json = "1.0.81"
termcolor = "1.1.3"
