[package]
name = "circomspect"
version = "0.8.0"
edition = "2021"
rust-version = "1.65"
license = "LGPL-3.0-only"
authors = ["Trail of Bits"]
readme = "../README.md"
description = "A static analyzer and linter for the Circom zero-knowledge DSL"
keywords = ["cryptography", "static-analysis", "zero-knowledge", "circom"]
repository = "https://github.com/trailofbits/circomspect"

[dependencies]
anyhow = "1.0"
atty = "0.2"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
parser = { package = "circomspect-parser", version = "2.1.2", path = "../parser" }
pretty_env_logger = "0.4"
program_analysis = { package = "circomspect-program-analysis", version = "0.8.0", path = "../program_analysis" }
program_structure = { package = "circomspect-program-structure", version = "2.1.2", path = "../program_structure" }
serde_json = "1.0"
termcolor = "1.1"
