[package]
name = "circomspect-parser"
version = "2.0.8"
edition = "2018"
build = "build.rs"
license = "LGPL-3.0-only"
description = "Support crate for the Circomspect static analyzer"
repository = "https://github.com/trailofbits/circomspect"
authors = ["Hermenegildo <hermegar@ucm.es>", "Fredrik Dahlgren <fredrik.dahlgren@trailofbits.com>"]

[build-dependencies]
rustc-hex = "2.0.1"
lalrpop = { version = "0.18.1", features = ["lexer"] }
num-bigint-dig = "0.6.0"
num-traits = "0.2.6"

[dependencies]
program_structure = { package = "circomspect-program-structure", version = "2.0.8", path = "../program_structure" }
lalrpop = { version = "0.18.1", features = ["lexer"] }
lalrpop-util = "0.18.1"
log = "0.4"
regex = "1.1.2"
rustc-hex = "2.0.1"
num-bigint-dig = "0.6.0"
num-traits = "0.2.6"
serde = "1.0.82"
serde_derive = "1.0.91"

[dev-dependencies]
program_structure = { package = "circomspect-program-structure", version = "2.0.8", path = "../program_structure" }
