[package]
name = "circomspect-parser"
version = "2.1.2"
edition = "2021"
rust-version = "1.65"
build = "build.rs"
license = "LGPL-3.0-only"
description = "Support crate for the Circomspect static analyzer"
repository = "https://github.com/trailofbits/circomspect"
authors = [
  "Hermenegildo <hermegar@ucm.es>",
  "Fredrik Dahlgren <fredrik.dahlgren@trailofbits.com>",
]

[build-dependencies]
rustc-hex = "2.0"
lalrpop = { version = "0.18", features = ["lexer"] }
num-bigint-dig = "0.6"
num-traits = "0.2"

[dependencies]
program_structure = { package = "circomspect-program-structure", version = "2.1.2", path = "../program_structure" }
lalrpop = { version = "0.19", features = ["lexer"] }
lalrpop-util = "0.19"
log = "0.4"
regex = "1.7"
rustc-hex = "2.1"
num-bigint-dig = "0.8"
num-traits = "0.2"
serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
program_structure = { package = "circomspect-program-structure", version = "2.1.2", path = "../program_structure" }
