[package]
name = "circomspect-program-structure-tests"
version = "0.5.1"
edition = "2021"

[dependencies]
parser = { package = "circomspect-parser", version = "2.0.1", path = "../parser" }
program_structure = { package = "circomspect-program-structure", version = "2.0.1", path = "../program_structure"}
